--- a/NTierProje.UI/Views/Product/Detail.cshtml
+++ b/NTierProje.UI/Views/Product/Detail.cshtml
@@ -6,8 +6,8 @@
 @model NTier.Model.Entities.Product
 
 @section scripts1{
-<script src="~/Content/Scripts/jquery-1.9.1.min.js"></script>
-<script src="~/Content/Scripts/Cart.js"></script>
+    <script src="~/Content/Scripts/jquery-1.9.1.min.js"></script>
+    <script src="~/Content/Scripts/Cart.js"></script>
     <script>
         $(document).ready(function () {
             $('.item_add').on('click', function () {
@@ -17,14 +17,20 @@
                     dataType: "Json",
                     url: "@Url.Action("Add","Member/Cart")/" + id,
                     success: function (data) {
+                        $("#lblMesaj").removeAttr("style");
+                        setTimeout(function () {
+                            $("#lblMesaj").fadeOut();
+                            $("#lblMesaj").css("visibility", "hidden");
+                        }, 2000);
+                       
                     }
-                });  
+                });
             });
         });
 
-       
+
     </script>
-    }
+}
 
 <div class="single">
     <div class="container">
@@ -35,15 +41,15 @@
                         <li data-thumb="~/Content/images/si.jpg">
                             <div class="thumb-image"> <img src="@Model.ImagePath" data-imagezoom="true" class="img-responsive"> </div>
                         </li>
-                      
+
                     </ul>
                 </div>
-               
+
             </div>
             <div class="col-md-7 single-right-left simpleCart_shelfItem animated wow slideInRight">
                 <h3>@Model.Name</h3>
                 <h4><span class="item_price">@Model.Price</span></h4>
-              
+
                 <div class="description">
                     <h5><i>@Model.UnitsInStock</i></h5>
                     <p>
@@ -51,13 +57,14 @@
                         eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident.
                     </p>
                 </div>
-              
+
                 <div class="occasion-cart">
                     <a class="item_add" href="javascript:void(0);" id="@Model.Id">add to cart</a>
+                    <label id="lblMesaj" style="visibility:hidden" class="alert alert-success">Eklendi!</label>
                 </div>
             </div>
             <div class="clearfix"> </div>
-            
+
         </div>
         <div class="clearfix"> </div>
     </div>
