--- a/NTierProje.UI/Areas/Admin/Views/AppUser/List.cshtml
+++ b/NTierProje.UI/Areas/Admin/Views/AppUser/List.cshtml
@@ -17,6 +17,7 @@
                 <th>Telefon Numarası</th>
                 <th>Adres</th>
                 <th>Email</th>
+                <th>Rol</th>
                 <th>Fotoğraf</th>
                 <th colspan="2">Güncelle / Sil</th>
             </tr>
@@ -32,6 +33,7 @@
                     <td>@item.PhoneNumber</td>
                     <td>@item.Address</td>
                     <td>@item.Email</td>
+                    <td>@item.Role</td>
                     <td><img src="@item.ImagePath" style="display:block;" width="30" height="30" /></td>
                     <td>
                         <a href="/Admin/AppUser/update/@item.Id">Güncelle</a>
