--- a/NTierProje.UI/Areas/Admin/Views/AppUser/Update.cshtml
+++ b/NTierProje.UI/Areas/Admin/Views/AppUser/Update.cshtml
@@ -34,12 +34,21 @@
         <label for="Email">Email</label>
         <input type="text" name="Email" value="@Model.Email" class="form-control" />
     </div>
+    <div class="form-control">
+        <label for="Role">Rol</label>
+        <select name="Role">
+            @foreach (var item in Enum.GetNames(typeof(NTier.Model.Entities.Role)))
+            {
+                <option value="@item">@item</option>
+            }
+        </select>
+    </div>
     <div class="form-group">
         <img style="display:block;" width="30" height="30" src="@Model.ImagePath" />
         <label for="Image">Fotoğraf Seçiniz</label>
         <input type="file" name="Image" value="" />
     </div>
+    
     @Html.HiddenFor(x => x.Id)
-    @Html.HiddenFor(x=>x.Role)
     <input type="submit" name="name" value="Güncelle" class="form-control btn btn-primary" />
 </form>
