--- a/NTierProje.UI/Views/Product/Detail.cshtml
+++ b/NTierProje.UI/Views/Product/Detail.cshtml
@@ -41,7 +41,6 @@
                         <li data-thumb="~/Content/images/si.jpg">
                             <div class="thumb-image"> <img src="@Model.ImagePath" data-imagezoom="true" class="img-responsive"> </div>
                         </li>
-
                     </ul>
                 </div>
 
@@ -57,13 +56,16 @@
                         eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident.
                     </p>
                 </div>
-
+                @if (!string.IsNullOrEmpty(HttpContext.Current.User.Identity.Name))
+                {
                 <div class="occasion-cart">
 
                     <a class="item_add" href="javascript:void(0);" id="@Model.Id">add to cart</a>
 
                     <label id="lblMesaj" style="visibility:hidden" class="alert alert-success">Eklendi!</label>
                 </div>
+                }
+
             </div>
             <div class="clearfix"> </div>
 
