--- a/NTierProje.UI/Views/Shared/_CategoryList.cshtml
+++ b/NTierProje.UI/Views/Shared/_CategoryList.cshtml
@@ -9,8 +9,8 @@
             {
                 <li class="dropdown menu-item">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="icon fa fa-shopping-bag" aria-hidden="true"></i>@item.Name</a>
-                    <ul class="dropdown-menu mega-menu">
-                        <li class="yamm-content">
+                    <ul class="dropdown-menu dropdown-menu-right">
+                        <li class="">
                             <div class="row">
                                 <div class="col-sm-12 col-md-3">
                                     <ul class="links list-unstyled">
