--- a/NTierProje.UI/Areas/Member/Views/Cart/Index.cshtml
+++ b/NTierProje.UI/Areas/Member/Views/Cart/Index.cshtml
@@ -23,7 +23,7 @@
                 </tbody>
             </table>
             <label>ödemeniz gereken toplam tutar: <span id="totalCount"></span> $</label>
-            <a class="btn btn-primary btn-block" href="/Member/Checkout/Add">Siparişi Tamamla!</a>
+            <a class="btn btn-primary btn-block" href="~/Member/Checkout/Add">Siparişi Tamamla!</a>
      <ul id="data">
 
      </ul>
@@ -91,6 +91,9 @@
             }
 
         });
+
+
+        
 
     </script>
 
