--- a/NTierProje.UI/Areas/Admin/Views/Orders/List.cshtml
+++ b/NTierProje.UI/Areas/Admin/Views/Orders/List.cshtml
@@ -3,7 +3,11 @@
     ViewBag.Title = "List";
     Layout = "~/Areas/Admin/Views/Shared/_SharedAdminLayout.cshtml";
 }
-@model List<NTier.Model.Entities.Orders>
+
+@using PagedList;
+@using PagedList.Mvc
+
+@model IPagedList<NTier.Model.Entities.Orders>
 <div class="col-md-12">
     <table class="table table-hover">
         <thead>
@@ -28,5 +32,7 @@
             }
         </tbody>
     </table>
+    <div class="pagedList">
+        @Html.PagedListPager(Model, page => Url.Action("List","Orders", new { page }), PagedListRenderOptions.Classic)
+    </div>
 </div>
-
