--- a/NTierProje.UI/Views/Home/Index.cshtml
+++ b/NTierProje.UI/Views/Home/Index.cshtml
@@ -14,15 +14,7 @@
         {
             bannerCounter++;
             <div class="item" style="width:100%; background-image: url(@item.ImagePath);">
-                <div class="container-fluid">
-                    <div class="caption bg-color txt-white vertical-center text-left">
-                        <div class="slider-header fadeInDown-1">Spring 2016</div>
-                        <div class="big-text fadeInDown-1"> Electro Sale  </div>
-                        <div class="excerpt fadeInDown-2 hidden-xs"> <span>Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit</span> </div>
-                        <div class="button-holder fadeInDown-3"> <a href="index.php?page=single-product" class="btn-lg btn btn-uppercase btn-primary shop-now-button">Shop Now</a> </div>
-                    </div>
-                    <!-- /.caption -->
-                </div>
+                
                 <!-- /.container-fluid -->
             </div>
             if (bannerCounter == 5) { break; }
@@ -37,50 +29,7 @@
 
 <!-- ========================================= SECTION – HERO : END ========================================= -->
 <!-- ============================================== INFO BOXES ============================================== -->
-<div class="info-boxes wow fadeInUp">
-    <div class="info-boxes-inner">
-        <div class="row">
-            <div class="col-md-6 col-sm-4 col-lg-4">
-                <div class="info-box">
-                    <div class="row">
-                        <div class="col-xs-12">
-                            <h4 class="info-box-heading green">money back</h4>
-                        </div>
-                    </div>
-                    <h6 class="text">30 Days Money Back Guarantee</h6>
-                </div>
-            </div>
-            <!-- .col -->
 
-            <div class="hidden-md col-sm-4 col-lg-4">
-                <div class="info-box">
-                    <div class="row">
-                        <div class="col-xs-12">
-                            <h4 class="info-box-heading green">free shipping</h4>
-                        </div>
-                    </div>
-                    <h6 class="text">Shipping on orders over $99</h6>
-                </div>
-            </div>
-            <!-- .col -->
-
-            <div class="col-md-6 col-sm-4 col-lg-4">
-                <div class="info-box">
-                    <div class="row">
-                        <div class="col-xs-12">
-                            <h4 class="info-box-heading green">Special Sale</h4>
-                        </div>
-                    </div>
-                    <h6 class="text">Extra $5 off on all items </h6>
-                </div>
-            </div>
-            <!-- .col -->
-        </div>
-        <!-- /.row -->
-    </div>
-    <!-- /.info-boxes-inner -->
-
-</div>
 <!-- /.info-boxes -->
 <!-- ============================================== INFO BOXES : END ============================================== -->
 <!-- ============================================== SCROLL TABS ============================================== -->
@@ -107,7 +56,7 @@
                                     <!-- /.product-image -->
 
                                     <div class="product-info text-left">
-                                        <h3 class="name"><a href="detail.html">@item.Name</a></h3>
+                                        <h3 class="name"><a href="/Product/detail/@item.Id">@item.Name</a></h3>
                                         <div class="rating rateit-small"></div>
                                         <div class="description"></div>
                                         <div class="product-price"> <span class="price">@item.Price</span> </div>
@@ -116,13 +65,7 @@
                                     <!-- /.product-info -->
                                     <div class="cart clearfix animate-effect">
                                         <div class="action">
-                                            <ul class="list-unstyled">
-                                                <li class="add-cart-button btn-group">
-                                                    <button data-toggle="tooltip" class="btn btn-primary icon" type="button" title="Add Cart"> <i class="fa fa-shopping-cart"></i> </button>
-                                                </li>
-                                                <li class="lnk wishlist"> <a data-toggle="tooltip" class="add-to-cart" href="detail.html" title="Wishlist"> <i class="icon fa fa-heart"></i> </a> </li>
-                                                <li class="lnk"> <a data-toggle="tooltip" class="add-to-cart" href="detail.html" title="Compare"> <i class="fa fa-signal" aria-hidden="true"></i> </a> </li>
-                                            </ul>
+                                          
                                         </div>
                                         <!-- /.action -->
                                     </div>
