--- a/NTierProje.UI/Views/Product/Detail.cshtml
+++ b/NTierProje.UI/Views/Product/Detail.cshtml
@@ -36,10 +36,10 @@
     <div class="container">
         <div class="col-md-12 single-right">
             <div class="col-md-5 single-right-left animated wow slideInUp">
-                <div class="flexslider">
+                <div class="flexslider" style="width:300px; height:300px;">
                     <ul class="slides">
                         <li data-thumb="~/Content/images/si.jpg">
-                            <div class="thumb-image"> <img src="@Model.ImagePath" data-imagezoom="true" class="img-responsive"> </div>
+                            <div class="thumb-image"><img src="@Model.ImagePath" style="width:100%; height:100%;" data-imagezoom="true" class="img-responsive"></div>
                         </li>
                     </ul>
                 </div>
