--- a/NTierProje.UI/Views/Shared/_ProductList.cshtml
+++ b/NTierProje.UI/Views/Shared/_ProductList.cshtml
@@ -26,7 +26,7 @@
                                         <!-- /.col -->
                                         <div class="col col-xs-7">
                                             <div class="product-info">
-                                                <h3 class="name"><a href="#">@Model[productCounter].Name</a></h3>
+                                                <h3 class="name"><a href="~/Product/Detail/@Model[productCounter].Id">@Model[productCounter].Name</a></h3>
                                                 <div class="rating rateit-small"></div>
                                                 <div class="product-price"> <span class="price"> @Model[productCounter].Price </span> </div>
                                                 <!-- /.product-price -->
