--- a/NTierProje.UI/Areas/Admin/Views/Category/Update.cshtml
+++ b/NTierProje.UI/Areas/Admin/Views/Category/Update.cshtml
@@ -13,6 +13,6 @@
         <label for="Description">Kategori Açıklaması</label>
         <input type="text" name="Description" value="@Model.Description" class="form-control" />
     </div>
-    <input style="visibility:hidden" type="text" name="ID" value="@Model.Id" />
+    @Html.HiddenFor(x => x.Id)
     <input type="submit" name="name" value="Güncelle" class="form-control btn btn-primary" />
 </form>
