--- a/NTierProje.UI/Views/Home/Index.cshtml
+++ b/NTierProje.UI/Views/Home/Index.cshtml
@@ -3,21 +3,21 @@
     ViewBag.Title = "Index";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
-@model IEnumerable<NTier.Model.Entities.Product>
+@model List<NTier.Model.Entities.Product>
 
 <!-- ========================================== SECTION – HERO ========================================= -->
 
 <div id="hero">
     <div id="owl-main" class="owl-carousel owl-inner-nav owl-ui-sm">
-        @{ int bannerCounter = 0;}
+        @{ int bckImageCount = 0;}
         @foreach (var item in Model)
         {
-            bannerCounter++;
+            bckImageCount++;
             <div class="item" style="width:100%; background-image: url(@item.ImagePath);">
                 
                 <!-- /.container-fluid -->
             </div>
-            if (bannerCounter == 5) { break; }
+            if (bckImageCount == 5) { break; }
         }
 
         <!-- /.item -->
@@ -37,55 +37,60 @@
     <div class="more-info-tab clearfix ">
         <h3 class="new-product-title pull-left">New Products</h3>
     </div>
-
-
-    <div class="tab-content outer-top-xs">
-        <div class="tab-pane in active" id="all">
-            <div class="product-slider">
-                <div class="owl-carousel home-owl-carousel custom-carousel owl-theme" data-item="4">
-                    @foreach (var item in Model)
-                    {
-                        <div class="item item-carousel">
-                            <div class="products">
-                                <div class="product">
-                                    <div class="product-image">
-                                        <div class="image"> <a href="/Product/Detail/@item.Id"><img src="@item.ImagePath" alt=""></a> </div>
-                                        <!-- /.image -->
-                                        <div class="tag new"><span>new</span></div>
-                                    </div>
-                                    <!-- /.product-image -->
-
-                                    <div class="product-info text-left">
-                                        <h3 class="name"><a href="/Product/detail/@item.Id">@item.Name</a></h3>
-                                        <div class="rating rateit-small"></div>
-                                        <div class="description"></div>
-                                        <div class="product-price"> <span class="price">@item.Price</span> </div>
-                                        <!-- /.product-price -->
-                                    </div>
-                                    <!-- /.product-info -->
-                                    <div class="cart clearfix animate-effect">
-                                        <div class="action">
-                                          
+    <!--4/4'lük ürün listelemesi için-->
+    @{ int productCounter = 0;}
+    @for (int i = 0; i < Model.Count / 4; i++)
+    {
+        <div class="tab-content outer-top-xs">
+            <div class="tab-pane in active" id="all">
+                <div class="product-slider">
+                    <div class="owl-carousel home-owl-carousel custom-carousel owl-theme" data-item="4">
+                        @for (int j = 0; j < Model.Count / 4; j++)
+                        {
+                            <div class="item item-carousel">
+                                <div class="products">
+                                    <div class="product">
+                                        <div class="product-image">
+                                            <div class="image"> <a href="/Product/Detail/@Model[productCounter].Id"><img src="@Model[productCounter].ImagePath" alt=""></a> </div>
+                                            <!-- /.image -->
+                                            <div class="tag new"><span>new</span></div>
                                         </div>
-                                        <!-- /.action -->
+                                        <!-- /.product-image -->
+
+                                        <div class="product-info text-left">
+                                            <h3 class="name"><a href="/Product/detail/@Model[productCounter].Id">@Model[productCounter].Name</a></h3>
+                                            <div class="rating rateit-small"></div>
+                                            <div class="description"></div>
+                                            <div class="product-price"> <span class="price">@Model[productCounter].Price</span> </div>
+                                            <!-- /.product-price -->
+                                        </div>
+                                        <!-- /.product-info -->
+                                        <div class="cart clearfix animate-effect">
+                                            <div class="action">
+
+                                            </div>
+                                            <!-- /.action -->
+                                        </div>
+                                        <!-- /.cart -->
                                     </div>
-                                    <!-- /.cart -->
+                                    <!-- /.product -->
+
                                 </div>
-                                <!-- /.product -->
-
+                                <!-- /.products -->
                             </div>
-                            <!-- /.products -->
-                        </div>
-                    }
+                            productCounter++;
 
-                    <!-- /.item -->
-
+                        }
+                        <!-- /.item -->
+                    </div>
+                    <!-- /.home-owl-carousel -->
                 </div>
-                <!-- /.home-owl-carousel -->
+                <!-- /.product-slider -->
             </div>
-            <!-- /.product-slider -->
         </div>
-    </div>
+    }
+
+
 
 
     <!-- /.tab-content -->
