--- a/NTierProje.UI/Views/Shared/_ProductList.cshtml
+++ b/NTierProje.UI/Views/Shared/_ProductList.cshtml
@@ -6,6 +6,7 @@
     <h3 class="section-title">Special Offers</h3>
     <div class="sidebar-widget-body outer-top-xs">
         <div class="owl-carousel sidebar-carousel special-offer custom-carousel owl-theme outer-top-xs">
+            <!--3/3'lük "Special Offers"" alanı için-->
             @{ int productCounter = 0;}
             @for (int i = 0; i < Model.Count/3; i++)
             {
